added regex to check timestamps, added persistence. Now need to add alarms and opening zoom

--- a/popup.html
+++ b/popup.html
@@ -33,6 +33,7 @@
     <body>
         <div class = "maincontent">
             <p id="time"></p>
+            <button id = "save">S</button>
         </div>
             <table id = "schedule" >
                 <tbody id = "schedule body">
