--- a/popup.html
+++ b/popup.html
@@ -1,60 +1,71 @@
-<!DOCTYPE html>  
-<html> 
-    <head>
-    </head>      
-    <style>        
-        button {height: 10px;          
-                width: 10px;          
-                outline: none;
-        }   
-        #cancel {
-            height: 20px;
-            width: 20px;
-        }
-        
-        body, html {
-            height: 300px;
-            width: 400px;
-        }
-        .maincontent{
-            width : 100%;
-            display : flex;
-            display : -webkit-flex;
-            flex-direction : row;
-            -webkit-flex-direction : row;
-            justify-content : center;
-            align-items : center;
-        }
-        tr, th, td {
-            border: 1px solid black;
-            text-align: left;
-        }
-        #schedule {
-            padding: 10px;
-        }
-    </style>
-    <body>
-        <div class = "maincontent">
-            <p id="time"></p>
-        </div>
-            <table id = "schedule" >
-                <tbody id = "schedule body">
-                    <tr>
-                        <th>Class</th>
-                        <th>Start Time</th>
-                        <th>End Time</th>
-                        <th>Zoom Link</th>
-                        <th><button id = "add"></button></th>
-                    </tr>
-                    <tr>
-                        <td></td>
-                        <td>MUST use 12 hour format (ex: 10:30 AM)</td>
-                        <td>MUST use 12 hour format (ex: 10:30 AM)</td>
-                        <td></td>
-                        <td></td>
-                    </tr>
-                </tbody>
-            </table>
-        <script src="js/background.js"></script>
-    </body>
+<!DOCTYPE html>
+<html>
+
+<head>
+</head>
+<style>
+    button {
+        height: 10px;
+        width: 10px;
+        outline: none;
+    }
+
+    #cancel {
+        height: 20px;
+        width: 20px;
+    }
+
+    body,
+    html {
+        height: 300px;
+        width: 400px;
+    }
+
+    .maincontent {
+        width: 100%;
+        display: flex;
+        display: -webkit-flex;
+        flex-direction: row;
+        -webkit-flex-direction: row;
+        justify-content: center;
+        align-items: center;
+    }
+
+    tr,
+    th,
+    td {
+        border: 1px solid black;
+        text-align: left;
+    }
+
+    #schedule {
+        padding: 10px;
+    }
+</style>
+
+<body>
+    <div class="maincontent">
+        <p id="time"></p>
+    </div>
+    <table id="schedule">
+        <tbody id="schedule body">
+            <tr>
+                <th>Class</th>
+                <th>Start Time</th>
+                <th>End Time</th>
+                <th>Zoom Link</th>
+                <th><button id="add"></button></th>
+            </tr>
+            <tr>
+                <td></td>
+                <td>MUST use 12 hour format (ex: 10:30 AM)</td>
+                <td>MUST use 12 hour format (ex: 10:30 AM)</td>
+                <td></td>
+                <td></td>
+            </tr>
+        </tbody>
+    </table>
+    <script src="js/background.js"></script>
+</body>
+
 </html>
